<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ExecutionLog</class>
 <widget class="QWidget" name="ExecutionLog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string notr="true">Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="tabConsole">
     <property name="tabPosition">
      <enum>QTabWidget::East</enum>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="tabGeneral">
      <attribute name="title">
       <string>General</string>
      </attribute>
      <layout class="QVBoxLayout"/>
     </widget>
     <widget class="QWidget" name="tabBan">
      <attribute name="title">
       <string>Blocked IPs</string>
      </attribute>
      <layout class="QVBoxLayout" name="_2"/>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
